--- a/templates/entity_query.html
+++ b/templates/entity_query.html
@@ -28,7 +28,7 @@
                 <form method = "get" id = 'searchEntityForm'>
                     <div >
                         <div class="input-group">
-                            <input type="text" id = "user_text" name = "user_text" class="form-control" placeholder="输入实体名称" aria-describedby="basic-addon1">
+                            <input type="text" id = "text" name = "user_text" class="form-control" placeholder="输入实体名称" aria-describedby="basic-addon1">
                             <span class="btn btn-primary input-group-addon" type="button" id="relationSearchButton" style="background-color:#4592fe ; padding:6px 38px" onclick="document.getElementById('searchEntityForm').submit();">查询</span>
                          </div>
                     </div>
