--- a/templates/relation_query.html
+++ b/templates/relation_query.html
@@ -7,7 +7,7 @@
         <script src="/static/js/echarts.min.js"></script>
     </head>
     <title>关系</title>
-    <div class="container"></div>
+    <div class="container">
     <div class="row">
         <!--head start-->
         <div class="col-md-12">
@@ -28,7 +28,7 @@
                     <form id="searchRelationForm" class="form-inline" style="padding-left: 10% ; padding-right: 10%"
                           method="get">
                         <div id="entity1" class="form-group" style="padding: 2%">
-                            <input type="text" id="entity1_text" name="entity1_text" class="form-control"
+                            <input type="text" id="entity1_text" name="entity1" class="form-control"
                                    placeholder="实体１" aria-describedby="basic-addon1">
                         </div>
                         <!--dropdown combobox start-->
@@ -45,11 +45,11 @@
                         </div>
                         <!--dropdown combobox end-->
                         <div id="relation_name" class="form-group hide" style="padding: 2%">
-                            <input type="text" id="relation_name_input" name="relation_name_text" class="form-control"
+                            <input type="text" id="relation_name_input" name="relation" class="form-control"
                                    placeholder="输入关系名称" aria-describedby="basic-addon1">
                         </div>
                         <div id="entity2" class="form-group" style="padding: 2%">
-                            <input type="text" id="entity2_text" name="entity2_text" class="form-control"
+                            <input type="text" id="entity2_text" name="entity2" class="form-control"
                                    placeholder="实体２" aria-describedby="basic-addon1">
                         </div>
                         <div class="btn-group" style="padding: 2%">
@@ -103,10 +103,11 @@
         {% endif %}
 
     </div>
+    </div>
     <script src="/static/js/jquery-1.8.3.min.js"></script>
     {% if isexist %}
-        var myChart = echarts.init(document.getElementById('main'));
         <script type="text/javascript">
+            var myChart = echarts.init(document.getElementById('graph'));
             var searchResult = {{searchResult|safe}}
                 //用表格列出所有的关系
                 tableData = []
@@ -210,6 +211,7 @@
             // 基于准备好的dom，初始化echarts实例
 
         </script>
+        <script>
         option = {
                 title: {text: '人民的名义关系图谱'},
                 tooltip: {
