--- a/templates/entity_recognition.html
+++ b/templates/entity_recognition.html
@@ -43,9 +43,10 @@
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in">
                         <div class="panel-body">
-                            {% autoescape off %}
-                            <h5>{{ rlt }}</h5>
-                            {% endautoescape %}
+{#                            {% autoescape off %}#}
+{#                            <h5>{{ rlt }}</h5>#}
+{#                            {% endautoescape %}#}
+
                         </div>
                     </div>
                 </div>
