--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                 <!-- notificatoin dropdown start-->
                 <ul class="nav pull-right top-menu">
                     <li>
-                        <a href='https://github.com/steamfeifei/MedicalKnowledgeMap_gaofei'>
+                        <a href='https://github.com/RipperLom/mkgDjangoProject.git'>
                             <i class="fa fa-github" aria-hidden="true"> open Github</i>
                         </a>
                     </li>
