--- a/templates/mkg_classify.html
+++ b/templates/mkg_classify.html
@@ -70,10 +70,11 @@
                 <h4 class="modal-title" id="myModalLabel"> 医疗分类树 </h4>
             </div>
             <div class="modal-body">
-                <div class="tree well">
-
-                    {{ level_tree }}
-                </div>
+{#                <div class="tree well">#}
+{##}
+{#                    {{ level_tree }}#}
+{#                </div>#}
+                <div id="tree"></div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -81,8 +82,43 @@
         </div>
     </div>
 </div>
-{% endautoescape %}
-<script>
-</script>
 
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap-treeview.js"></script>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+<script>
+
+    var tree = JSON.parse({{ result }})
+·
+
+    function getTree() {
+    // Some logic to retrieve, or generate tree structure
+        return tree;
+    }
+    $('#tree').treeview({
+        expandIcon: "glyphicon glyphicon-plus-sign",
+        collapseIcon: "glyphicon glyphicon-minus-sign",
+        nodeIcon: "glyphicon glyphicon-user",
+        showTags: true,
+        data: tree,
+        tags: ['gaofei', 'agofeios', 'slfjsl'],
+        highlightSelected: true,    //是否高亮选中
+        color:"#000000",// 文本颜色
+        backColor:"#FFFFFF",// 背景
+        selectedBackColor: "#5485F7",// 选中时的背景色
+        selectedColor: '#ffffff',//选中时的文本颜色
+        onhoverColor: "#5485F7",// hover时的颜色
+        showBorder: false,
+        levels: 1,// 展开层级
+        state: {
+            checked: true,
+            disabled: true,
+            expanded: true,
+            selected: true
+        },
+        selectable: true,
+    });
+
+</script>
+{% endautoescape %}
 {% endblock %}
