--- a/templates/mkg_classify.html
+++ b/templates/mkg_classify.html
@@ -83,42 +83,55 @@
     </div>
 </div>
 
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap-treeview.js"></script>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+{% endautoescape %}
+<!--
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap-treeview.js"></script>
+<link href="/static/css/bootstrap.min.css" rel="stylesheet">
 <script>
+    {#var tree = JSON.parse({{ result }})#}
 
-    var tree = JSON.parse({{ result }})
-·
-
-    function getTree() {
-    // Some logic to retrieve, or generate tree structure
-        return tree;
+    function createtree(data){
+            $('#tree').treeview({
+            expandIcon: "glyphicon glyphicon-plus-sign",
+            collapseIcon: "glyphicon glyphicon-minus-sign",
+            nodeIcon: "glyphicon glyphicon-user",
+            showTags: true,
+            data: data,
+            tags: ['gaofei', 'agofeios', 'slfjsl'],
+            highlightSelected: true,    //是否高亮选中
+            color:"#000000",// 文本颜色
+            backColor:"#FFFFFF",// 背景
+            selectedBackColor: "#5485F7",// 选中时的背景色
+            selectedColor: '#ffffff',//选中时的文本颜色
+            onhoverColor: "#5485F7",// hover时的颜色
+            showBorder: false,
+            levels: 1,// 展开层级
+            state: {
+                checked: true,
+                disabled: true,
+                expanded: true,
+                selected: true
+            },
+            selectable: true,
+        });
     }
-    $('#tree').treeview({
-        expandIcon: "glyphicon glyphicon-plus-sign",
-        collapseIcon: "glyphicon glyphicon-minus-sign",
-        nodeIcon: "glyphicon glyphicon-user",
-        showTags: true,
-        data: tree,
-        tags: ['gaofei', 'agofeios', 'slfjsl'],
-        highlightSelected: true,    //是否高亮选中
-        color:"#000000",// 文本颜色
-        backColor:"#FFFFFF",// 背景
-        selectedBackColor: "#5485F7",// 选中时的背景色
-        selectedColor: '#ffffff',//选中时的文本颜色
-        onhoverColor: "#5485F7",// hover时的颜色
-        showBorder: false,
-        levels: 1,// 展开层级
-        state: {
-            checked: true,
-            disabled: true,
-            expanded: true,
-            selected: true
-        },
-        selectable: true,
-    });
+    $('.col-md-3 button').click(function () {
+
+            $.ajax({
+                url:"/mkg_classify/",
+                type:"post",
+                dataType:"json",  // 预期服务器返回数据的类型
+                data:{"query": "", csrfmiddlewaretoken:"{{ csrf_token }}"},
+                success:function(data){
+                    alert(2);
+                console.log(data);
+                    createtree(data)
+             }
+            });
+    })
+
 
 </script>
-{% endautoescape %}
+-->
 {% endblock %}
